UBI-138: update generateDockerFile() method; update application.docker.conf